experience: Add BMW CarIT experience

--- a/bmw.tex
+++ b/bmw.tex
@@ -3,6 +3,41 @@
   \item \textbf{BMW CarIT GmbH}, Ulm, Germany (October 2012 - Present)\\
     \emph{C++, Python, C}
     \begin{my_desc}
-    \item .
+      \item[Core Architecture Team] of the BMW next Head-Unit. (December 2014 - Present)
+        \begin{my_bullets}
+          \item Started alone in the team while looking for a lead architect. Responsibilities in the team
+            included requirement elicitation, architecture design, technology reviews/decisions,
+            coordination of multiple domains to evaluate and drive technical decisions and various
+            technical tasks needed on different phases.
+          \item Drove the collection of requirements for the application framework, setting up of the team
+            and designing/reviewing the framework architecture.
+          \item Drove the centralization of the systemd unit files and the system configuration, developed the
+            Yocto recipes to control the deployment on the different head unit images and wrote tests to
+            verify running configuration against specified configuration.
+        \end{my_bullets}
+      \item[Security Engineer] (June 2014 - January 2015)
+        \begin{my_bullets}
+          \item Participated in requirement review.
+          \item Evaluated technologies/solution/architecture.
+          \item Participated in the evaluation of different suppliers and clarifications of requirements with them
+            during offers
+        \end{my_bullets}
+      \item[Developer] for Head-Unit connectivity components (May 2013 - May 2014)
+        Participated in the re-factoring of two Linux daemons written in C to C++. The re-factoring was essential
+        in order to use the daemons with some C++ generated bindings. In parallel re-designed the state-machine.
+        Parallel tasks included training of colleagues on git/gerrit workflow and best practices and C++11 features.
+      \item[Developer] for Bluetooth proof-of-concepts (October 2012 - May 2013)
+        \begin{my_bullets}
+          \item Bluetooth / Bluez (C).  Worked on a proof of concept for AVRCP 1.5 for BlueZ.
+            In parallel provided a few bug fixes upstream and supported Genivi discussion to define the
+            GENIVI Bluetooth API.
+          \item Bluetooth testing framework (python). Designed and implemented a testing framework to
+            test BMW specific BMW use cases. The framework was able to support different backends and
+            Bluetooth profiles.
+        \end{my_bullets}
+      \item[Member] of the BMW CarIT core interview team
+      \item[Mentoring] of a student during their internship. The student became an active part of the developing
+        team implementing and testing different features. As a second step the student did their bachelor thesis
+        under my supervision.
     \end{my_desc}
 \end{document}
