education: Move education to a separate file
Update the education section, add trainings and move it to a separate
file.

--- a/alan.tex
+++ b/alan.tex
@@ -126,13 +126,7 @@
 \subfile{qualifications}
 
 %Section: Education
-\section{Education}
-\begin{description}
-    \item \textbf{Ph.D. in Electrical and Computer Engineering}, University of Patras, Greece (2009)\\
-    ``Provision of secure services using reliable infrastructures"
-    \item \textbf{B.Sc. in Computer Engineering and Informatics}, University of Patras, Greece (2001)
-\end{description}
-%\end{list}
+\subfile{education}
 
 %\section{R\&D Projects}
 % PhD related projects. Not relevant.
