--- a/qualifications.tex
+++ b/qualifications.tex
@@ -1,13 +1,11 @@
 \documentclass[alan.tex]{subfiles}
 \begin{document}
-  \section{Personal Profile}
-    GNU/Linux \\
-    Agile/Scrum \\
-    Vim
   \section{Summary of Qualifications}
   \begin{tabular}{ll}
-    \textsc{Programming Languages}:  & C++, C, Python\\[1pt]
-    \textsc{Frameworks/Libraries}: & Qt, Glib\\[1pt]
+    \textsc{Languages and Libraries}:  & C++, C, Python\\
+     & stl, Qt, glib\\
+    \textsc{Scripting Languages}:  & Bash, sh\\
+    \textsc{Tools}: & git, vim, QtCreator, gdb, Valgrind\\
     \textsc{Languages}: & English, Greek
   \end{tabular}
 \end{document}
