bmw: Update BMW CarIT section

--- a/bmw.tex
+++ b/bmw.tex
@@ -1,9 +1,8 @@
 \documentclass[alan.tex]{subfiles}
 \begin{document}
-  \item \textbf{BMW CarIT GmbH}, Ulm, Germany (October 2012 - Present)\\
-    \emph{C++, Python, C}
+  \item \textbf{BMW CarIT GmbH}, Ulm, Germany (October 2012 - Present)
     \begin{my_desc}
-      \item[Core Architecture Team] of the BMW next Head-Unit. (December 2014 - Present)
+      \item[Core Architecture Team] for the next BMW Head-Unit. (December 2014 - Present)
         \begin{my_bullets}
           \item Started alone in the team while looking for a lead architect. Responsibilities in the team
             included requirement elicitation, architecture design, technology reviews/decisions,
@@ -19,25 +18,27 @@
         \begin{my_bullets}
           \item Participated in requirement review.
           \item Evaluated technologies/solution/architecture.
-          \item Participated in the evaluation of different suppliers and clarifications of requirements with them
-            during offers
+          \item Participated in the evaluation of several suppliers and in the clarification of requirements with
+            them during the supplier offer phase.
         \end{my_bullets}
       \item[Developer] for Head-Unit connectivity components (May 2013 - May 2014)
-        Participated in the re-factoring of two Linux daemons written in C to C++. The re-factoring was essential
-        in order to use the daemons with some C++ generated bindings. In parallel re-designed the state-machine.
-        Parallel tasks included training of colleagues on git/gerrit workflow and best practices and C++11 features.
+        Participated in the re-factoring of two Linux daemons from C to C++. The re-factoring was essential
+        in order to use the daemons with some C++ generated bindings. The re-factoring was used also as an opportunity
+        to re-design the architecture of these two daemons.
+        While developing for these components I was heavily involved in training colleagues on git/gerrit workflow and C++11 features.
       \item[Developer] for Bluetooth proof-of-concepts (October 2012 - May 2013)
         \begin{my_bullets}
           \item Bluetooth / Bluez (C).  Worked on a proof of concept for AVRCP 1.5 for BlueZ.
             In parallel provided a few bug fixes upstream and supported Genivi discussion to define the
             GENIVI Bluetooth API.
           \item Bluetooth testing framework (python). Designed and implemented a testing framework to
-            test BMW specific BMW use cases. The framework was able to support different backends and
+            test BMW specific use cases. The framework was designed to be able to support different backends and
             Bluetooth profiles.
         \end{my_bullets}
-      \item[Member] of the BMW CarIT core interview team
+      \item[Member] of the BMW CarIT core interview team. I was part of a team with the responsibility to review phone interviews
+        conducted by other colleagues, schedule and organize on-site interviews and train more developers to do interviews.
       \item[Mentoring] of a student during their internship. The student became an active part of the developing
-        team implementing and testing different features. As a second step the student did their bachelor thesis
+        team implementing and testing different features. After completing their internship they continued with their bachelor thesis
         under my supervision.
     \end{my_desc}
 \end{document}
