qualifications: update technical skills
Remove scripting languages line and add CMake.

--- a/qualifications.tex
+++ b/qualifications.tex
@@ -2,10 +2,9 @@
 \begin{document}
   \section{Summary of Qualifications}
   \begin{tabular}{ll}
-    \textsc{Languages and Libraries}:  & C++, C, Python\\
-     & stl, Qt, glib\\
-    \textsc{Scripting Languages}:  & Bash, sh\\
-    \textsc{Tools}: & git, vim, QtCreator, gdb, Valgrind\\
+    \textsc{Programming Languages and Libraries}:  & C++11, C, Python, Bash\\
+     & C++ Standard Library, Qt, glib\\
+    \textsc{Tools}: & git, vim, QtCreator, gdb, CMake, Valgrind\\
     \textsc{Languages}: & English, Greek
   \end{tabular}
 \end{document}
