fixes: minor fixes for consistency

--- a/nimbus.tex
+++ b/nimbus.tex
@@ -8,7 +8,7 @@
       \item[Researcher] of an innovative, software-centric approach to address navigational and data entry problems in legacy applications displayed on touch screens in medical environments. 
       \begin{my_bullets}
         \item Developed an adapted pattern recognition method for user interfaces. This was implemented as a cross-platform, real-time toolkit independent of the graphical toolkit used by any 3rd party application. 
-        \item Created three different compositing visualization methods using GDI under Windows and under GNU/linux the X-Toolkit and GTK+/GDK.
+        \item Created three different compositing visualization methods using GDI under Windows and under GNU/Linux the X-Toolkit and GTK+/GDK.
       \end{my_bullets}
   \end{my_desc}
 \end{document}
