--- a/nokia.tex
+++ b/nokia.tex
@@ -1,6 +1,6 @@
 \documentclass[alan.tex]{subfiles}
 \begin{document}
-\item \textbf{Senior Software Engineer}, Nokia, Germany (July 2011 - September 2012)\\
+\item \textbf{Nokia - Senior Software Engineer}, Ulm, Germany (July 2011 - September 2012)\\
   \emph{C++, C, Qt, Shell scripting}
   \begin{my_desc}
     \item[Worked] mainly on the positioning daemon for a new GNU/Linux-based low-cost smartphone operating system.
