editing/cleaning up
Fix a few sentences, remove whitespaces and shorten description where
possible.

--- a/oldcontracts.tex
+++ b/oldcontracts.tex
@@ -3,12 +3,12 @@
   \item[BEM S\&S] Patras, Greece ( January 2009 - August 2009)\\
   \emph{C++, Python, wxWidgets}
   \begin{my_contractor}
-  Member of a small team developing an application for Boundary Element Method solutions. Worked mainly on maintaining the cross-platform aspect of the application and on the development of the user interface. 
+  Part of a team developing an application for Boundary Element Method solutions. Worked mainly on maintaining the cross-platform aspect of the application and on the development of the user interface.
   \end{my_contractor}
   \item[Virtual Trip Ltd.] Athens, Greece (2006) \\
   \emph{ C, Oracle database, .NET Framework 2.0 }
   \begin{my_contractor}
-    Member of a small team developing a Secure Documents Issuing information system for the Hellenic National Passport Center. 
+    Member of a small team developing a Secure Documents Issuing information system for the Hellenic National Passport Center.
     Developed a set of low-level libraries handling passport printing, database management and different UI modules for the main application.
   \end{my_contractor}
   \item[Department of Electrical and Computer Engineering] U. of Patras, Greece (2004-2005)
@@ -18,6 +18,6 @@
   \item[Virtual Trip Ltd.] Athens, Greece (Summer 2004) \\
   \emph{ C, Shell scripting }
   \begin{my_contractor}
-    Member of a small team developing a meteorological data converter from HPRT and PDUS to GRIB format for the Hellenic National Meteorological Service. 
+    Member of a team developing a meteorological data converter from HPRT and PDUS to GRIB format for the Hellenic National Meteorological Service.
   \end{my_contractor}
 \end{document}
