--- a/bmw.tex
+++ b/bmw.tex
@@ -5,15 +5,17 @@
     \begin{my_desc}
       \item[Core Architecture Team] for the next BMW Head-Unit. (December 2014 - Present)
         \begin{my_bullets}
-          \item Started alone in the team while looking for a lead architect. Responsibilities in the team
-            included requirement elicitation, architecture design, technology reviews/decisions,
-            coordination of multiple domains to evaluate and drive technical decisions and various
-            technical tasks needed on different phases.
-          \item Responsible for the centralization of the systemd unit files and the system configuration, developed the
-            Yocto recipes to control the deployment on the different head unit images, wrote tests to
-            verify running configuration against specified configuration and reviewing any changes done.
-          \item Drove the collection of requirements for the application framework, setting up of the team
-            and designing/reviewing the framework architecture.
+          \item Responsibilities in the team include requirement elicitation, architecture design,
+            technology reviews/decisions, coordination of multiple domains to evaluate and drive technical
+            decisions and various technical tasks needed on different phases. Some notable examples are:
+            \begin{my_bullets}
+            \item Responsible for the centralization of the systemd unit files and the system configuration,
+              developing and maintaining the Yocto recipes to control the deployment on the different head
+              unit images, wrote tests to verify running configuration against specified configuration and
+              reviewing any changes done.
+            \item Drove the collection of requirements for the application framework, setting up of the team
+              and designing/reviewing the framework architecture.
+            \end{my_bullets}
         \end{my_bullets}
       \item[Security Engineer] (June 2014 - January 2015)
         \begin{my_bullets}
@@ -23,17 +25,16 @@
           \item Participated in the evaluation of several suppliers and in the clarification of requirements with
             them during the supplier offer phase.
         \end{my_bullets}
-      \item[Developer] for Head-Unit connectivity components (May 2013 - May 2014)
+      \item[Developer] for Head-Unit connectivity components; bluetooth device management and telephony manager (May 2013 - May 2014)
         \begin{my_bullets}
-          \item Worked in a team re-factoring of two Linux daemons from C to C++.
-            The re-factoring was used also as an opportunity to re-design the architecture of these two daemons.
+          \item Worked in a team re-factoring the two Linux daemons from C to C++.
           \item While developing for these components I was heavily involved in training colleagues on git/gerrit
               workflow and C++11 features.
         \end{my_bullets}
       \item[Developer] for Bluetooth (October 2012 - May 2013)
         \begin{my_bullets}
-          \item Bluetooth / Bluez (C).  Worked on a proof of concept for AVRCP 1.5 for BlueZ.
-            In parallel provided bug fixes upstream and supported Genivi discussion to define the
+        \item Bluetooth / BlueZ (C).  Worked on a proof of concept for AVRCP 1.5 for BlueZ (ver. 5).
+            In parallel provided bug fixes upstream and supported GENIVI discussions to define the
             GENIVI Bluetooth API.
           \item Bluetooth testing framework (python). Designed and implemented a testing framework to
             test BMW specific use cases. The framework was designed to be able to support different backends and
