--- a/nimbus.tex
+++ b/nimbus.tex
@@ -5,10 +5,9 @@
     \begin{my_desc}
       \item[Developed] a Fire Training Unit built around different hardware sensors and providing a fully visualized localization application. Designed the system architecture and implemented in PyGame a real-time, 2D basic visualization of trainees movement.
       \item[Developed] a Flow Cytometry application, using Qt, which provides real-time scatter plots and histograms of flow cytometry data. Additionally developed a Flow Cytometry Standard library to generate files based on the FCS3.1 standard.
-      \item[Researcher] of an innovative, software-centric approach to address navigational and data entry problems in legacy applications displayed on touch screens in medical environments. 
-      \begin{my_bullets}
-        \item Developed an adapted pattern recognition method for user interfaces. This was implemented as a cross-platform, real-time toolkit independent of the graphical toolkit used by any 3rd party application. 
-        \item Created three different compositing visualization methods using GDI under Windows and under GNU/Linux the X-Toolkit and GTK+/GDK.
-      \end{my_bullets}
+      \item[Researcher] and developer of an approach to address navigational and data entry problems in
+        legacy applications displayed on touch screens in medical environments. Developed an
+        adapted pattern recognition method for user interfaces which was implemented as a cross-platform,
+        real-time toolkit independent of the graphical toolkit used by any 3rd party application.
   \end{my_desc}
 \end{document}
