--- a/bmw.tex
+++ b/bmw.tex
@@ -9,12 +9,13 @@
             technology reviews/decisions, coordination of multiple domains to evaluate and drive technical
             decisions and various technical tasks needed on different phases. Some notable examples are:
             \begin{my_bullets}
+            \item Driving technical discussions with different domains and architectural decisions/designs.
             \item Responsible for the centralization of the systemd unit files and the system configuration,
               developing and maintaining the Yocto recipes to control the deployment on the different head
-              unit images, wrote tests to verify running configuration against specified configuration and
+              unit images, writing tests to verify running configuration against specified configuration and
               reviewing any changes done.
-            \item Drove the collection of requirements for the application framework, setting up of the team
-              and designing/reviewing the framework architecture.
+            \item Collected the requirements for the BMW Head-Unit application framework, drove the decision
+                to use Qt as the core of it and subsequently worked on the initial architectural design.
             \end{my_bullets}
         \end{my_bullets}
       \item[Security Engineer] (June 2014 - January 2015)
