--- a/education.tex
+++ b/education.tex
@@ -10,8 +10,9 @@
   \item \textbf{Trainings \& Courses}
     \begin{description}
       \item \textsc{Effective C++ in an Embedded Environment}, DevelopMentor, December 2013
-      \item \textsc{C/C++ secure coding}, Secure Coding Academy, February 2015
       \item \textsc{Linux Forensics Workshop}, Hal Pomeranz, Brucon 2014
+      \item \textsc{C/C++ secure coding}, Secure Coding Academy, February 2015
+      \item \textsc{Advanced Python}, Python Academy, July 2016
     \end{description}
   \end{description}
 \end{document}
