here: Add HERE work chapter

--- a/alan.tex
+++ b/alan.tex
@@ -92,7 +92,7 @@
 \rhead{}
 \lfoot{}
 \cfoot{}
-\rfoot{\footnotesize Aexandros Antonopoulos - Page \thepage\ of \pageref{LastPage}}
+\rfoot{\footnotesize Alexandros Antonopoulos - Page \thepage\ of \pageref{LastPage}}
 \font\fb=''[cmr10]'' %for use with \LaTeX command
 
 %--------------------TITLE-------------
@@ -104,13 +104,14 @@
 %Section: Personal Data
 \begin{tabular}{rl}
     \textsc{email:}     & \href{mailto:antonopa@gmail.com}{antonopa@gmail.com} \\
-    \textsc{Phone:}     & +49 152 55685022 \\
-    \textsc{Address:}   & Yorckstrasse 1/1, Ulm, Germany
+    \textsc{Phone:}     & +49 151 4249 8578\\
+    \textsc{Address:}   & Charlottenburger Str. 39A, Berlin, Germany
 \end{tabular}
 
 %Section: Work Experience at the top
 \section{Employment History}
 \begin{description}
+  \subfile{here}
   \subfile{bmw}
   \subfile{nokia}
   \subfile{nimbus}
