--- a/bmw.tex
+++ b/bmw.tex
@@ -1,9 +1,9 @@
 \documentclass[alan.tex]{subfiles}
 \begin{document}
-  \item \textbf{BMW CarIT GmbH}, Ulm, Germany (October 2012 - Present)\\
+  \item \textbf{BMW CarIT GmbH}, Ulm, Germany (October 2012 - January 2017)\\
     \emph{C++, C, Python}
     \begin{my_desc}
-      \item[Core Architecture Team] for the next BMW Head-Unit. (December 2014 - Present)
+      \item[Core Architecture Team] for the next BMW Head-Unit. (December 2014 - January 2017)
         \begin{my_bullets}
           \item Responsibilities in the team include requirement elicitation, architecture design,
             technology reviews/decisions, coordination of multiple domains to evaluate and drive technical
