Updated HERE experience
Add Sr. Architecture Manager description
Add showdetails LaTeX flag for past description to be able to hide at
compilation time the lengthier description

--- a/alan.tex
+++ b/alan.tex
@@ -54,6 +54,9 @@
 {
 \end{itemize} }
 
+\newtoggle{showdetail}
+\togglefalse{showdetail}
+
 %Setup hyperref package, and colours for links
 \usepackage{hyperref}
 \usepackage{subfiles}
@@ -134,6 +137,6 @@
 %\subfile{research}
 
 
-\vfill \hfill Last update: June, 2016.
+\vfill \hfill Last update: March, 2021.
 
 \end{document}
