--- a/education.tex
+++ b/education.tex
@@ -9,10 +9,12 @@
   \begin{description}
   \item \textbf{Trainings \& Courses}
     \begin{description}
-      \item \textsc{Effective C++ in an Embedded Environment}, DevelopMentor, December 2013
-      \item \textsc{Linux Forensics Workshop}, Hal Pomeranz, Brucon 2014
+      \item \textsc{Leadership Accelerator - Servant Leadership}, HERE Technologies Internal training, April 2020
+      \item \textsc{Automotive SPICE}, Kugler Maag, March 2020
+	  \item \textsc{Advanced Python}, Python Academy, July 2016
       \item \textsc{C/C++ secure coding}, Secure Coding Academy, February 2015
-      \item \textsc{Advanced Python}, Python Academy, July 2016
+      \item \textsc{Linux Forensics Workshop}, Hal Pomeranz, Brucon 2014
+      \item \textsc{Effective C++ in an Embedded Environment}, DevelopMentor, December 2013
     \end{description}
   \end{description}
 \end{document}
