--- a/here.tex
+++ b/here.tex
@@ -1,36 +1,29 @@
 \documentclass[alan.tex]{subfiles}
 \begin{document}
-  \item \textbf{Here GmbH}, Berlin, Germany (February 2017 - Present)\\
-    \emph{Solution Architecture, Project lead}
+  \item \textbf{HERE Technologies GmbH}, Berlin, Germany (February 2017 - Present)\\
+    \emph{People management, Project leading, Solution Architecture}
     \begin{my_desc}
-      \item[Senior Principal Architect] (February 2017 - Present)
-        \begin{my_bullets}
-        \item Responsibilities in the team include requirement elicitation, architecture design,
-          customer engagement, technology reviews/decisions, coordination of multiple domains to
-          evaluate and drive technical decisions, and various technical tasks needed on different
-          phases. Some notable examples are:
+    \item[Senior Architecture Manager] (September 2019 - Present)
+    \begin{my_bullets}
+    \item Leader of a team of senior architects (8 to 10 members).
+      \begin{my_bullets}
+      \item The team is responsible to define the solution architecture during an opportunity evaluation phase, and provides a key role during execution as the technical bridge between customers, professional services engineering teams, HERE product teams, program management, and all relevant stakeholders.
+      \item Created a strong team spirit even though each member of the team worked on different projects with different targets. Working constantly at facilitating growth for the team; this is done in various ways.  By providing feedback (both on the positive and on areas that need improvement). Working with each team member to amplify their strengths, while working together to identify weaknesses and the right way to address them. Enabling different ways for knowledge sharing (review sessions, "playtime" learning sessions, coffee and share discussions, etc).
+    \end{my_bullets}
+    \item Member of the leadership team for the automotive organization and later the professional services solution engineering group; among different responsibilities this involves working on creating the organization's VSEM (Vision-Strategy-Execution-Metrics), and monitoring and improving the organization's processes (architecture, requirements).
+
+    \end{my_bullets}
+    \item[Principal - Senior Principal Architect] (February 2017 - March 2018 - August 2019)
+      \begin{my_bullets}
+      \item Responsibilities in the team included requirement elicitation, architecture design, customer engagement, technology reviews/decisions, coordination of multiple domains to evaluate and drive technical decisions, and various technical tasks needed on different phases. Some notable examples are:
             \begin{my_bullets}
-            \item Working as a project lead, in parallel to the solution architecture role, in order to
-              deliver a highly innovative feature for automotive use cases (visualization and guidance) around
-              HERE's HD road content. This effort involved coordinating multiple internal and external
-              organizations, identifying gaps towards customer commitments, defining an end-to-end
-              solution bridging the available data and the customer's requirements.
-            \item Defined and documented the modile SDK solution for a major automotive customer, by reviewing
-              requirements, discussing with the customer and coordinating multiple internal domains in order
-              to define a commonly agreed architecture solution.
-            \item Defined a solution for NDS Streaming, a functionality not supported by the standard, but
-              needed for the Here mobile SDK delivered to a customer to fulfill a contractual requirement.
-            \item Supported the definition, and the development of an initial prototype, for an in-house
-              IDL engine. Worked with multiple domains to re-shape their public APIs and write the IDL around
-              them.
-            \item Continuously supporting the architecture team:
-              \begin{my_bullets}
-              \item Support the chief of architect to define processes needed for the team,
-              \item Led multiple cross-domain regular syncs (creating an agenda, collecting open topics,
-                moderating)
-              \item Created a newsletter, as means to keep the organization up-to-date with some of the hot
-                topics the architecture team has been involved with
-              \end{my_bullets}
+            \item Worked as a project lead, in parallel to the solution architecture role, in order to deliver a highly innovative feature for automotive use cases around HERE's HD road content (from map creation to rendering the content on embedded devices). This effort involved coordinating multiple internal and external organizations, identifying gaps towards customer commitments, defining an end-to-end solution that matched the customer's needs.
+            \item Drove the modile SDK solution for a major automotive customer.
+        \iftoggle{showdetail}{%
+            \item Defined a solution for NDS Streaming, a functionality not supported by the standard, but needed for the Here mobile SDK delivered to a customer to fulfill a contractual requirement.
+            \item Supported the definition, and the development of an initial prototype, for an in-house IDL engine. Worked with multiple domains to re-shape their public APIs and write the IDL around them.
+           }
+            \item Supporting the architecture team: define/improve team's processes, moderate multiple workshops
             \end{my_bullets}
         \end{my_bullets}
     \end{my_desc}
