--- a/lam.tex
+++ b/lam.tex
@@ -3,10 +3,14 @@
   \item[Laboratoire d'Astrophysique de Marseille] France (September 2009 - April 2010)\\
   \emph{C++, C, C\#, Labview, Processing, Java}
   \begin{my_contractor}
+  \iftoggle{showdetail}{%
   Member of an ESA Startiger research team which designed and implemented a \emph{flying solar coronagraph demonstrator} (demonstration of a concept of satellites flying in formation to photograph the Sun corona).
     \begin{my_bullets}
       \item Designed and implemented the main application driving all the demonstrator instruments, providing test automation, and real-time data visualization.
       \item Developed a number of different utilities and libraries for different PoCs.
     \end{my_bullets}
+    }{%
+    Member of an ESA Startiger research team which designed and implemented a \emph{flying solar coronagraph demonstrator} (demonstration of a concept of satellites flying in formation to photograph the Sun corona).
+    }
   \end{my_contractor}
 \end{document}
