--- a/nimbus.tex
+++ b/nimbus.tex
@@ -3,11 +3,12 @@
   \item \textbf{Research Engineer}, TEC-Centre, Cork Institure of Technology, Ireland (April 2010 - June 2011)\\
     \emph{C++, C, Python, GTK+, OpenCV, Qt}
     \begin{my_desc}
+    \iftoggle{showdetail}{%
       \item[Developed] a Fire Training Unit built around different hardware sensors and providing a fully visualized localization application. Designed the system architecture and implemented in PyGame a real-time, 2D basic visualization of trainees movement.
       \item[Developed] a Flow Cytometry application, using Qt, which provides real-time scatter plots and histograms of flow cytometry data. Additionally developed a Flow Cytometry Standard library to generate files based on the FCS3.1 standard.
-      \item[Researcher] and developer of an approach to address navigational and data entry problems in
-        legacy applications displayed on touch screens in medical environments. Developed an
-        adapted pattern recognition method for user interfaces which was implemented as a cross-platform,
-        real-time toolkit independent of the graphical toolkit used by any 3rd party application.
+      \item[Researcher] and developer of an approach to address navigational and data entry problems in legacy applications displayed on touch screens in medical environments. Developed an adapted pattern recognition method for user interfaces which was implemented as a cross-platform, real-time toolkit independent of the graphical toolkit used by any 3rd party application.
+  }{%
+  	\item[Worked] (research and development) on multiple research projects: Flow cytometry application on Qt, UI pattern recognition library for legacy applications, Fire training application (mostly project management and mentoring of student working on the app).
+  }
   \end{my_desc}
 \end{document}
