--- a/nokia.tex
+++ b/nokia.tex
@@ -3,12 +3,8 @@
 \item \textbf{Nokia - Senior Software Engineer}, Ulm, Germany (July 2011 - September 2012)\\
   \emph{C++, C, Qt, Shell scripting}
   \begin{my_desc}
-    \item[Developer] for the positioning daemon for a new GNU/Linux-based low-cost smartphone operating system.
-        Worked on porting and refactoring of major components of the daemon (IPC, Class design etc) initially designed
-        for MeeGo thus using a resource-heavy design and implementation. Refactoring was done to enable it to work
-        efficiently in a far more resource-restricted platform (memory and CPU).
-    \item[Developed] a new interface for ofono (open source telephony) bridging RRLP/RRC functionality between the
-      modem and the positioning daemon.
+    \item[Developer] for the positioning daemon for a new GNU/Linux-based low-cost smartphone operating system. Worked on porting and refactoring of major components of the daemon (IPC, Class design etc) initially designed for MeeGo thus using a resource-heavy design and implementation. Refactoring was done to enable it to work efficiently in a far more resource-restricted platform (memory and CPU).
+    \item[Developed] a new interface for ofono (open source telephony) bridging RRLP/RRC functionality between the modem and the positioning daemon.
     \item[SDK] super-user. Participated in testing, requirements and actively supporting it for the middle-ware group.
   \end{my_desc}
 \end{document}
