--- a/qualifications.tex
+++ b/qualifications.tex
@@ -2,9 +2,8 @@
 \begin{document}
   \section{Summary of Qualifications}
   \begin{tabular}{ll}
-    \textsc{Programming Languages and Libraries}:  & C++11, C, Python, Bash\\
-     & C++ Standard Library, Qt, glib\\
-    \textsc{Tools}: & git, vim, QtCreator, gdb, CMake, Valgrind\\
-    \textsc{Languages}: & English, Greek
+    \textsc{People management}: & Coaching, Capacity planning, Servant leadership \\
+    \textsc{Programming Languages and Libraries}:  & Python, Bash, C++, C\\
+    \textsc{Languages}: & English, Greek (native), Basic German
   \end{tabular}
 \end{document}
